corrects spacing to recaptcha3

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ footer > .row {
   }
 }
 
-#rc-anchor-container {
+.g-recaptcha {
   margin-bottom: 1em;
 }
 
